--- a/Sort/Sort.csproj
+++ b/Sort/Sort.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="Pastel" Version="2.1.0" />
+    <PackageReference Include="System.Runtime.Numerics" Version="4.3.0" />
   </ItemGroup>
 
 </Project>
